<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/cor_l1">

    <TextView

        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:padding="32dp"
        android:textStyle="bold"
        android:textSize="32sp"
        android:background="@color/cor_c1"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/rascunho"
        />

    <LinearLayout
        android:layout_gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">
        <Button
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/btn_fundo_solido"
            android:onClick="onFundoSolido"/>
        <Button
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/btn_imagem_galeria"
            android:onClick="onImagem"/>
        <Button
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/btn_fotografia"
            android:onClick="onFotografia"/>
        <Button
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/btn_historico"
            android:onClick="onHistorico"/>
    </LinearLayout>

</FrameLayout>